[project]
name = "agent"
version = "0.1.0"
description = "Autonomous job agent: orchestration, reasoning, and persistence"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.2",
    "aiosqlite>=0.20.0",
    "langgraph>=0.2.28",
    "langgraph-checkpoint-sqlite>=1.0.3",
    "openai>=1.50.0",
    "websockets>=13.0",
    "python-multipart>=0.0.9",
    "docling>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
    "ruff>=0.6.8",
    "mypy>=1.11.2",
    "httpx>=0.27.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RET", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
